Setup NBA Controller, Service, and Repository

--- a/sports-iq-backend/src/main/resources/application.properties
+++ b/sports-iq-backend/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-spring.application.name=sports-iq-backend
+spring.application.name=sports-iq
+spring.data.mongodb.uri = mongodb + srv ://application:4kHYKePdUibzBTq3@sportsiq.hulfg.mongodb.net/sports-data
