--- a/sports-iq-backend/src/main/resources/application.properties
+++ b/sports-iq-backend/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 spring.application.name=sports-iq
-spring.data.mongodb.uri = mongodb+srv://application:4kHYKePdUibzBTq3@sportsiq.hulfg.mongodb.net/sports-data
+spring.data.mongodb.uri = mongodb+srv://application:4kHYKePdUibzBTq3@sportsiq.hulfg.mongodb.net/sport-data
