--- a/sports-iq/angular.json
+++ b/sports-iq/angular.json
@@ -12,7 +12,7 @@
       },
       "root": "",
       "sourceRoot": "src",
-      "prefix": "app",
+      "prefix": "si",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:application",
@@ -26,7 +26,6 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
-							"src/assets",
               {
                 "glob": "**/*",
                 "input": "public"
@@ -37,6 +36,9 @@
 							"src/theme.scss",
 							"src/_theme-colors.scss"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": ["src/partials"]
+            },
             "scripts": [],
             "server": "src/main.server.ts",
             "outputMode": "server",
@@ -99,7 +101,6 @@
             "tsConfig": "tsconfig.spec.json",
             "inlineStyleLanguage": "scss",
             "assets": [
-							"src/assets",
               {
                 "glob": "**/*",
                 "input": "public"
