--- a/sports-iq/angular.json
+++ b/sports-iq/angular.json
@@ -77,6 +77,9 @@
           "defaultConfiguration": "production"
         },
         "serve": {
+					"options": {
+						"hmr": true
+					},
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
