--- a/sports-iq/tsconfig.json
+++ b/sports-iq/tsconfig.json
@@ -16,8 +16,12 @@
     "moduleResolution": "bundler",
     "importHelpers": true,
     "target": "ES2022",
-    "module": "ES2022"
+    "module": "ES2022",
+		"paths": {
+			"@sports-iq/*": ["./src/app/*"]
+		}
   },
+	
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
