--- a/sports-iq/angular.json
+++ b/sports-iq/angular.json
@@ -39,12 +39,7 @@
             "stylePreprocessorOptions": {
               "includePaths": ["src/partials"]
             },
-            "scripts": [],
-            "server": "src/main.server.ts",
-            "outputMode": "server",
-            "ssr": {
-              "entry": "src/server.ts"
-            }
+            "scripts": []
           },
           "configurations": {
             "production": {
