--- a/sports-iq/package.json
+++ b/sports-iq/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+		"build:prod": "ng build --configuration production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve:ssr:sports-iq": "node dist/sports-iq/server/server.mjs"
@@ -22,7 +23,6 @@
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/platform-server": "^19.1.0",
     "@angular/router": "^19.1.0",
-    "@angular/ssr": "^19.1.1",
     "express": "^4.18.2",
     "prettier": "^3.4.2",
     "rxjs": "~7.8.0",
