Start on backend Dockerfile

--- a/sports-iq-backend/Dockerfile
+++ b/sports-iq-backend/Dockerfile
@@ -1,9 +1,16 @@
 # Stage 1: Build
-FROM gradle:8.12.1-jdk21-corretto as backend-build
+FROM gradle:8.12.1-jdk21-corretto as build
 
-RUN mkdir /app
 WORKDIR /app
 
-COPY build.gradle.kts settings.gradle.kts ./
+COPY build.gradle.kts settings.gradle.kts /app/
 
 RUN gradle build
+
+# Stage 2: Host
+FROM amazoncorretto:21
+
+COPY --from=build /app/build/libs/$ARTIFACT_NAME .
+ 
+EXPOSE 8080
+ENTRYPOINT exec java -jar ${ARTIFACT_NAME}
