--- a/sports-iq/package.json
+++ b/sports-iq/package.json
@@ -34,7 +34,9 @@
     "@angular/platform-server": "^21.0.0",
     "@angular/router": "^21.0.0",
     "@angular/ssr": "^21.0.1",
+    "angular-oauth2-oidc": "^20.0.2",
     "express": "^5.1.0",
+    "es-cookie": "^1.5.0",
 		"prettier": "3.3.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
