--- a/sports-iq-backend/src/SportsIQ.API/appsettings.Development.json
+++ b/sports-iq-backend/src/SportsIQ.API/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "SportsIQDatabase": "Data Source=localhost;Initial Catalog=SportsIQ;Persist Security Info=True;User ID=sa;Password=P@ssw0rd123;TrustServerCertificate=true;MultipleActiveResultSets=True;"
   }
 }
