--- a/sports-iq-backend/src/SportsIQ.Application/SportsIQ.Application.csproj
+++ b/sports-iq-backend/src/SportsIQ.Application/SportsIQ.Application.csproj
@@ -2,12 +2,19 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SportsIQ.Domain\SportsIQ.Domain.csproj" />
+    <ProjectReference Include="..\SportsIQ.Infrastructure\SportsIQ.Infrastructure.csproj" />
   </ItemGroup>
+
 
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.0" />
+  </ItemGroup>
+
 
 </Project>
