--- a/sports-iq-backend/src/SportsIQ.Infrastructure/SportsIQ.Infrastructure.csproj
+++ b/sports-iq-backend/src/SportsIQ.Infrastructure/SportsIQ.Infrastructure.csproj
@@ -5,6 +5,10 @@
     <ProjectReference Include="..\SportsIQ.Application\SportsIQ.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="10.0.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
