Remove SSR and reconfigure Auth

--- a/sports-iq-backend/src/SportsIQ.API/appsettings.Development.json
+++ b/sports-iq-backend/src/SportsIQ.API/appsettings.Development.json
@@ -5,6 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Auth0": {
+    "Domain": "https://dev--isjyw9f.us.auth0.com",
+    "Audience": "https://sportsiq.api"
+  },
   "ConnectionStrings": {
     "SportsIQDatabase": "Data Source=localhost;Initial Catalog=SportsIQ;Persist Security Info=True;User ID=sa;Password=P@ssw0rd123;TrustServerCertificate=true;MultipleActiveResultSets=True;"
   }
