--- a/sports-iq/package.json
+++ b/sports-iq/package.json
@@ -6,8 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "serve:ssr:sports-iq": "node dist/sports-iq/server/server.mjs"
+    "test": "ng test"
   },
   "prettier": {
     "printWidth": 100,
@@ -33,11 +32,10 @@
     "@angular/platform-browser": "^21.0.0",
     "@angular/platform-server": "^21.0.0",
     "@angular/router": "^21.0.0",
-    "@angular/ssr": "^21.0.1",
-    "angular-oauth2-oidc": "^20.0.2",
-    "express": "^5.1.0",
+    "@auth0/auth0-angular": "^2.3.0",
     "es-cookie": "^1.5.0",
-		"prettier": "3.3.2",
+    "express": "^5.1.0",
+    "prettier": "3.3.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
