--- a/sports-iq-backend/src/SportsIQ.API/SportsIQ.API.csproj
+++ b/sports-iq-backend/src/SportsIQ.API/SportsIQ.API.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>5879115b-7639-4018-a045-bafc66d17e01</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
