--- a/sports-iq/package.json
+++ b/sports-iq/package.json
@@ -32,7 +32,7 @@
     "@angular/platform-browser": "^21.0.0",
     "@angular/platform-server": "^21.0.0",
     "@angular/router": "^21.0.0",
-    "@auth0/auth0-angular": "^2.3.0",
+    "angular-oauth2-oidc": "^20.0.2",
     "es-cookie": "^1.5.0",
     "express": "^5.1.0",
     "prettier": "3.3.2",
